<resources>
    <string name="app_name">OBD-II Fahrtenbuch</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No Connection</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Scan BLE Devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="send">Send</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>

    <string name="bluetooth_connection_status">Status:</string>
    <string name="bluetooth_connection_connected">Verbunden</string>
    <string name="bluetooth_connection_disconnected">Getrennt</string>
    <string name="bluetooth_connect">Verbinden</string>
    <string name="bluetooth_disconnect">Trennen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="command_read_data">Lese Daten</string>
    <string name="shared_preferences_file_key">de.deuschle.android_obd2.shared_preferences_file_key</string>
    <string name="shared_preferences_device_address">shared_preferences_device_address</string>
    <string name="shared_preferences_device_name">shared_preferences_device_name</string>

    <string name="vehicle_speed">Vehicle Speed</string>
    <string name="vehicle_speed_toolbar_title">@string/vehicle_speed</string>
    <string name="vehicle_speed_description">Aktuelle Geschwindigkeit:</string>

    <string name="engine_speed">Engine RPM</string>
    <string name="rpm_description">Aktuelle Umdrehungen:</string>
    <string name="rpm_toolbar_title">@string/engine_speed</string>

    <string name="ambient_temperature_description">aktuelle Umgebungstemperatur:</string>
    <string name="ambient_temperature_toolbar_title">@string/ambient_temperature</string>
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="streaming_data_database_name">StreamingDataDatabase</string>
    <string name="vin_database_name">VinDatabase</string>
    <string name="init_toolbar_title">Init Activity</string>
    <string name="init_button">Starten</string>
    <string name="init_restart_adapter">Adapter neustarten</string>
    <string name="init_deactivate_space_separation">Leerzeichentrennung deaktivieren</string>
    <string name="init_success">success - OK</string>
    <string name="init_error">error - Error</string>
    <string name="main_init_test">Test Init Commands</string>
    <string name="init_select_ecu">Steuergerät auswählen</string>
    <string name="init_line_feed_off">Zeilenumbrüche entfernen</string>
    <string name="start">Start</string>
    <string name="streaming_stop">Stop</string>
    <string name="main_rpm_streaming">RPM Streaming</string>
    <string name="main_ambient_temperature_streaming">Ambient Temperature Streaming</string>
    <string name="main_streaming">Streaming</string>
    <string name="displayDataEngineRPM">Engine RPM:</string>
    <string name="displayDataVehicleSpeed">Vehicle Speed:</string>
    <string name="displayDataAmbientTemperature">Ambient Temperature:</string>
    <string name="displayDataSessionDate">Datum und Uhrzeit:</string>
    <string name="displayDataToolbarTitle">Datacollection</string>
    <string name="main_previous_sessions">Previous Sessions</string>
    <string name="session_list_empty_text">There are no sessions in the database.\nPlease record one first.</string>
    <string name="display_data_id">Id:</string>
    <string name="init_adapter_toolbar_tilte">Initialize Adapter</string>
    <string name="init_adapter_status_running">Running</string>
    <string name="init_adapter_status_finished">Finished</string>
    <string name="init_adapter_status_not_stated">Not started yet</string>
    <string name="init_adapter_status">Status:</string>
    <string name="main_init_adapter">Init Adapter</string>
    <string name="streaming_vehicle_speed">Vehicle Speed</string>
    <string name="streaming_engine_speed">Engine Speed</string>
    <string name="streaming_ambient_temperature">Ambient Temperature</string>
    <string name="streaming_toolbar">Combined Streaming</string>
</resources>