<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Commands.VehicleSpeedActivity">

    <TextView
        android:id="@+id/vehicle_speed_text_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/vehicle_speed_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_speed_button_start" />

    <Button
        android:id="@+id/vehicle_speed_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="readData"
        android:text="@string/command_read_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_speed_toolbar" />

    <TextView
        android:id="@+id/vehicle_speed_text_view_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/vehicle_speed_text_view_description"
        app:layout_constraintTop_toBottomOf="@+id/vehicle_speed_button_start" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vehicle_speed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/vehicle_speed_toolbar_title" />
</androidx.constraintlayout.widget.ConstraintLayout>